# tictactoe

./: README.md
DmitriyGlushkov/: CMakeLists.txt  main.cpp
Konstantin_mikheev/: tictactoe_game.cpp
PichuginNikolay/: .gitignore
PichuginNikolay/TicTacToe/: main.cpp
Rashid_Bikbulatov/: CMakeLists.txt  main.cpp
TicTacToe/: main.cpp
dmitry_nikishov/: main.cpp
